force-app/main/default/objects/Apex_Event_Log__c/Apex_Event_Log__c.object-meta.xml
<CustomObject>
    <description>Log Object to log apex actions on salesforce</description>
    <label>Apex Event Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>