force-app/main/default/objects/Apex_Event_Log__c/fields/Apex_class__c.field-meta.xml
<CustomField>
    <fullName>Apex_class__c</fullName>
    <description>The calling apex class</description>
    <label>Apex class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>