force-app/main/default/objects/Apex_Event_Log__c/fields/Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method__c</fullName>
    <description>The method name where the log came from</description>
    <label>Apex Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>