force-app/main/default/objects/Apex_Event_Log__c/fields/Detailed_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Error_Message__c</fullName>
    <description>Detailed Error message</description>
    <label>Detailed Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>