force-app/main/default/objects/Apex_Event_Log__c/fields/Detailed_Information__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Information__c</fullName>
    <description>Record/s informations</description>
    <label>Detailed Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>