force-app/main/default/objects/Apex_Event_Log__c/fields/HTTP_Body__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Body__c</fullName>
    <label>HTTP Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>