force-app/main/default/objects/Apex_Event_Log__c/fields/HTTP_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Endpoint__c</fullName>
    <label>HTTP Endpoint</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>