force-app/main/default/objects/Apex_Event_Log__c/fields/HTTP_Headers__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Headers__c</fullName>
    <label>HTTP Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>