force-app/main/default/objects/Apex_Event_Log__c/fields/Http_Type__c.field-meta.xml
<CustomField>
    <fullName>Http_Type__c</fullName>
    <label>Http Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>HEAD</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>TRACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>