force-app/main/default/objects/Apex_Event_Log__c/fields/Matched_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Id__c</fullName>
    <description>if there is an error like duplicate email detected
we want to understand what is the id</description>
    <label>Matched Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>