force-app/main/default/objects/Apex_Event_Log__c/fields/Max_Number_Of_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_Of_Retries__c</fullName>
    <defaultValue>2</defaultValue>
    <description>The Maximum allowed number of retries for this request log</description>
    <label>Max Number Of Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>