force-app/main/default/objects/Apex_Event_Log__c/fields/Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Record_Ids__c</fullName>
    <description>The record Id/ids the log is referring to</description>
    <label>Record Ids</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>