force-app/main/default/objects/Apex_Event_Log__c/fields/Retry_Number__c.field-meta.xml
<CustomField>
    <fullName>Retry_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The current number of retries made for this request log</description>
    <label>Retry Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>