force-app/main/default/objects/Apex_Event_Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Session Id from the SimilarWeb site</description>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>