force-app/main/default/objects/Apex_Event_Log__c/fields/Should_Retry__c.field-meta.xml
<CustomField>
    <fullName>Should_Retry__c</fullName>
    <formula>AND(ISPICKVAL(Log_Type__c, &quot;Error&quot;), Retry_Number__c &lt; Max_Number_Of_Retries__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Should Retry</label>
    <type>Checkbox</type>
</CustomField>