force-app/main/default/objects/Apex_Event_Log__c/fields/sObjectId_Created__c.field-meta.xml
<CustomField>
    <fullName>sObjectId_Created__c</fullName>
    <description>will contain a campaign id or task id in the future.</description>
    <label>sObjectId Created</label>
    <length>30</length>
    <type>Text</type>
</CustomField>