force-app/main/default/objects/Apex_Event_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 or 2 or 3 or 4</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Record_Ids__c</columns>
    <columns>Log_Type__c</columns>
    <columns>Apex_class__c</columns>
    <columns>Apex_Method__c</columns>
    <columns>HTTP_Endpoint__c</columns>
    <columns>Detailed_Information__c</columns>
    <columns>Detailed_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_class__c</field>
        <operation>contains</operation>
        <value>ExchangeRates</value>
    </filters>
    <filters>
        <field>Apex_class__c</field>
        <operation>equals</operation>
        <value>ExchangeRates</value>
    </filters>
    <filters>
        <field>Apex_class__c</field>
        <operation>equals</operation>
        <value>ExchangeRates</value>
    </filters>
    <filters>
        <field>Apex_class__c</field>
        <operation>equals</operation>
        <value>ExchangeRatesScheduler</value>
    </filters>
    <label>All</label>
</ListView>