force-app/main/default/objects/Apex_Event_Log__c/listViews/call_Groudon.listView-meta.xml
<ListView>
    <fullName>call_Groudon</fullName>
    <columns>NAME</columns>
    <columns>Apex_class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>Log_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_class__c</field>
        <operation>equals</operation>
        <value>GroudonIntegrationService</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>call Groudon TODAY</label>
</ListView>