force-app/main/default/objects/Apex_Event_Log__c/listViews/LeadCaptureService_Erros.listView-meta.xml
<ListView>
    <fullName>LeadCaptureService_Erros</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Record_Ids__c</columns>
    <columns>Log_Type__c</columns>
    <columns>Apex_class__c</columns>
    <columns>Apex_Method__c</columns>
    <columns>HTTP_Endpoint__c</columns>
    <columns>Detailed_Information__c</columns>
    <columns>Detailed_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <filters>
        <field>Apex_class__c</field>
        <operation>equals</operation>
        <value>LeadCaptureServiceHandler</value>
    </filters>
    <label>LeadCaptureService Erros</label>
</ListView>