force-app/main/default/objects/Apex_Event_Log__c/listViews/Territory_Management_Error_CreatedToday.listView-meta.xml
<ListView>
    <fullName>Territory_Management_Error_CreatedToday</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Record_Ids__c</columns>
    <columns>Related_Record_Id__c</columns>
    <columns>Log_Type__c</columns>
    <columns>Apex_class__c</columns>
    <columns>Apex_Method__c</columns>
    <columns>Detailed_Error_Message__c</columns>
    <columns>Detailed_Information__c</columns>
    <columns>HTTP_Endpoint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Apex_class__c</field>
        <operation>equals</operation>
        <value>ActivateAccountFlagBatch,TerritoryManagementBatch</value>
    </filters>
    <label>Territory Management Error CreatedToday</label>
</ListView>